# ESP-Miner

./: CLAUDE.md  sdkconfig  sdkconfig.ble
.claude/: settings.json
.claude/skills/: build-and-ota.md  debug-ble.md  demo-test.md  release.md
components/: boat-mwr
components/hashanchor/: CMakeLists.txt  claw_task.c  hashanchor_crypto.c  hashanchor_http.c  hashanchor_task.c
components/hashanchor/include/: claw_task.h  hashanchor.h
docs/: HANDOFF.md
main/: CMakeLists.txt  ble_buyer.c  ble_buyer.h  ble_x402.c  ble_x402.h  display.h  main.c  nvs_config.c  nvs_config.h  screen.c  screen.h
main/http_server/: http_server.c  openapi.yaml
main/http_server/axe-os/src/app/components/edit/: edit.component.html  edit.component.ts
